cloudformation/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates a VPC with subnets, security group, internet gateway, an EC2 instance with Apache2 installed, and a CloudWatch alarm for CPU utilization

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '123.12.0.0/20'
      Tags:
        - Key: Name
          Value: MyVPC

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '123.12.0.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: PublicSubnet

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP traffic
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: MySecurityGroup

  MyEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-007020fd9c84e18c7  # Specified AMI ID
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref MySecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo apt update -y
          sudo apt install -y apache2
          sudo systemctl start apache2
          sudo systemctl enable apache2
      Tags:
        - Key: Name
          Value: MyEC2Instance

  AssociateAddress:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref MyEC2Instance
      AllocationId: !GetAtt MyEIP.AllocationId

  CPUUtilizationAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Alarm for CPU utilization exceeding 70%
      Namespace: AWS/EC2
      MetricName: CPUUtilization
      Dimensions:
        - Name: InstanceId
          Value: !Ref MyEC2Instance
      Statistic: Average
      Period: 300
      EvaluationPeriods: 1
      Threshold: 70
      ComparisonOperator: GreaterThanThreshold
      AlarmActions:
        - !Ref CPUUtilizationNotificationTopic

  CPUUtilizationNotificationTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: CPUUtilizationNotificationTopic

Outputs:
  InstanceId:
    Description: ID of the EC2 instance
    Value: !Ref MyEC2Instance
    Export:
      Name: MyEC2InstanceId

EmailNotificationTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: 'EmailNotificationTopic'

EmailSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      Protocol: email
      Endpoint: 'krishnakumar.rvs@gmail.com'
      TopicArn: !Ref EmailNotificationTopic
